fixix project description paragraph spacing

--- a/civictechprojects/static/css/partials/_AboutProject.scss
+++ b/civictechprojects/static/css/partials/_AboutProject.scss
@@ -119,6 +119,10 @@
     padding: 25px 15px 0 15px;
   }
 
+  .AboutProjects-description-details #project-details {
+    white-space: pre-wrap;
+  }
+
   .AboutProjects-skills {
     width: 49.5%;
     margin-right: .5%;
